<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_digital_video</name>
  <version>1.1.0</version>
  <description>Shows mapping results as video to the JAUS users.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_sensing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fkie_iop_accesscontrol</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_digital_resource_discovery</depend>
  <depend>fkie_iop_discovery</depend>
  <depend>fkie_iop_visual_sensor</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

<export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
  
</package>
