<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_digital_video</name>
  <version>2.1.0</version>
  <description>Shows mapping results as video to the JAUS users.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_sensing</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fkie_iop_accesscontrol</depend>
  <depend>fkie_iop_digital_resource_discovery</depend>
  <depend>fkie_iop_discovery</depend>
  <depend>fkie_iop_visual_sensor</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
