<?xml version="1.0"?>
<package format="2">
  <name>iop_digital_video_fkie</name>
  <version>1.1.0</version>
  <description>Shows mapping results as video to the JAUS users.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_sensing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>iop_accesscontrol_fkie</depend>
  <depend>iop_component_fkie</depend>
  <depend>iop_digital_resource_discovery_fkie</depend>
  <depend>iop_discovery_fkie</depend>
  <depend>iop_visual_sensor_fkie</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

<export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>
  
</package>
